--- a/configure.ac
+++ b/configure.ac
@@ -1,17 +1,23 @@
-AC_PREREQ ([2.50])
-AC_INIT([guile-irc], 0.2)
+dnl -*- Autoconf -*-
+
+AC_INIT(guile-irc, 0.2)
+AC_CONFIG_SRCDIR(irc/irc.scm)
 AC_CONFIG_AUX_DIR([build-aux])
-AC_CONFIG_SRCDIR([irc.scm])
+AM_INIT_AUTOMAKE([color-tests -Wall -Wno-portability foreign])
 AM_SILENT_RULES([yes])		
 
-AC_CONFIG_MACRO_DIR([m4])
+GUILE_PROGS
 
-AM_INIT_AUTOMAKE()
+if $GUILE_TOOLS | grep -q compile; then
+   # everything cool
+   true
+else
+   AC_MSG_ERROR([Guile 2.0 required.])
+fi
 
-GUILE_PROGS()
-GUILE_SITE_DIR()
+AC_CONFIG_FILES([Makefile irc/config.scm] [doc/Makefile])
+AC_CONFIG_FILES([env], [chmod +x env])
 
-PKG_CHECK_MODULES([GUILE], [guile-2.0])
 
 AC_CHECK_PROG(have_makeinfo, makeinfo, yes, no)
 AM_CONDITIONAL(HAVE_MAKEINFO, test "$have_makeinfo" = yes)
@@ -19,6 +25,4 @@ AM_CONDITIONAL(HAVE_MAKEINFO, test "$have_makeinfo" = yes)
 AC_CHECK_PROG(have_pdf, texi2pdf, yes, no)
 AM_CONDITIONAL(HAVE_PDF, test "$have_pdf" = yes)
 
-AC_CONFIG_FILES([Makefile] [doc/Makefile])
-
-AC_OUTPUT()
+AC_OUTPUT
