Added a test to check if the user wants gnutls to be supported and if they do, check if they have it installed and otherwise give an error.

--- a/Makefile.am
+++ b/Makefile.am
@@ -11,6 +11,13 @@ SOURCES = \
 	irc/tagged-hook.scm \
 	irc/irc.scm \
 	irc/handlers.scm
+if GNUTLS
+SOURCES += \
+	irc/gnutls.scm \
+	irc/network.scm
+else
+SOURCES += 
+endif
 
 info_TEXINFOS = doc/api.texi
 
